Issue 2778 - fix line-height overflow

--- a/app/styles/core/base.scss
+++ b/app/styles/core/base.scss
@@ -7,7 +7,7 @@ body {
     @extend %text;
     background: $white; // fallback
     color: $grayer;
-    line-height: 1.2;
+    line-height: 1.3;
     min-height: 100%;
     width: 100%;
     .master {
